--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -5,8 +5,91 @@
 
 @import "compass/reset";
 
+body p, ol, ul, td {
+	font-family: verdana, arial, helvetica, sans-serif;
+  font-size:   13px;
+  line-height: 18px;
+}
+
 body {
-	a {
-		color: red;
+	padding: 10px;
+	
+	#content {
+		margin-left: 100px;
+		
+		h1 {
+			font-size: 28px;
+			margin: 10px;
+		}
+	
+		tr {
+			padding: 2px;
+		
+			th {
+				padding: 0 4px 0 4px;
+			}
+		
+			td {
+				padding: 0 4px 0 4px;
+			}
+		}
+
+		a { 
+			color: blue; 
+			text-decoration: none;
+		
+			visited { 
+				color: red; 
+			}
+		
+			hover { 
+				color: red; 
+				background-color: green; 
+			}
+		}
+	}
+}
+
+pre {
+  background-color: #eee;
+  padding: 10px;
+  font-size: 11px;
+}
+
+.fieldWithErrors {
+  padding: 2px;
+  background-color: red;
+  display: table;
+}
+
+#errorExplanation {
+  width: 400px;
+  border: 2px solid red;
+  padding: 7px;
+  padding-bottom: 12px;
+  margin-bottom: 20px;
+  background-color: #f0f0f0;
+
+	h2 {
+		text-align: left;
+		font-weight: bold;
+		padding: 5px 5px 5px 15px;
+		font-size: 12px;
+		margin: -7px;
+		background-color: #c00;
+		color: #fff;
+	}
+	
+	p {
+	  color: #333;
+	  margin-bottom: 0;
+	  padding: 5px;
+	}
+	
+	ul {
+		li {
+	  	font-size: 12px;
+		  list-style: square;
+		}
 	}
 }
