--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,13 +4,10 @@
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
     %title Contacts 
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
-    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
-    /[if IE]
-      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
 
   %body
     %p
       = notice
-
-    = yield
+    #content
+      = yield
 
