--- a/app/views/parties/edit.html.haml
+++ b/app/views/parties/edit.html.haml
@@ -1,44 +1,45 @@
-%h1 Editing party
+#edit
+  %h1 Editing party
 
-- form_for(@party) do |f|
-  = f.error_messages
+  - form_for(@party) do |f|
+    = f.error_messages
 
-  %p 
-    = f.label :first_name 
-    %br
-    = f.text_field :first_name
-  %p 
-    = f.label :last_name 
-    %br
-    = f.text_field :last_name
-  %p 
-    = f.label :address 
-    %br
-    = f.text_field :address
-  %p 
-    = f.label :city 
-    %br
-    = f.text_field :city
-  %p 
-    = f.label :state 
-    %br
-    = f.text_field :state
-  %p 
-    = f.label :zip 
-    %br
-    = f.text_field :zip 
-  %p 
-    = f.label :phone 
-    %br
-    = f.text_field :phone 
-  %p 
-    = f.label :email 
-    %br
-    = f.text_field :email 
-  %p 
-    = f.submit 'Update' 
+    %p 
+      = f.label :first_name 
+      %br
+      = f.text_field :first_name
+    %p 
+      = f.label :last_name 
+      %br
+      = f.text_field :last_name
+    %p 
+      = f.label :address 
+      %br
+      = f.text_field :address
+    %p 
+      = f.label :city 
+      %br
+      = f.text_field :city
+    %p 
+      = f.label :state 
+      %br
+      = f.text_field :state
+    %p 
+      = f.label :zip 
+      %br
+      = f.text_field :zip 
+    %p 
+      = f.label :phone 
+      %br
+      = f.text_field :phone 
+    %p 
+      = f.label :email 
+      %br
+      = f.text_field :email 
+    %p 
+      = f.submit 'Update' 
 
 
 
-= link_to 'Show', @party |
-= link_to 'Back', parties_path 
+  = link_to 'Show', @party |
+  = link_to 'Back', parties_path 
