--- a/app/views/parties/edit.html.haml
+++ b/app/views/parties/edit.html.haml
@@ -1,45 +1,46 @@
 #edit
-  %h1 Editing party
+  %h1 Editing #{@party.first_name} #{@party.last_name}
 
   - form_for(@party) do |f|
     = f.error_messages
 
     %p 
       = f.label :first_name 
-      %br
+      %br/
       = f.text_field :first_name
     %p 
       = f.label :last_name 
-      %br
+      %br/
       = f.text_field :last_name
     %p 
       = f.label :address 
-      %br
+      %br/
       = f.text_field :address
     %p 
       = f.label :city 
-      %br
+      %br/
       = f.text_field :city
     %p 
       = f.label :state 
-      %br
+      %br/
       = f.text_field :state
     %p 
       = f.label :zip 
-      %br
+      %br/
       = f.text_field :zip 
     %p 
       = f.label :phone 
-      %br
+      %br/
       = f.text_field :phone 
     %p 
       = f.label :email 
-      %br
+      %br/
       = f.text_field :email 
+    %br/
     %p 
       = f.submit 'Update' 
 
-
-
+  %br/
+  %br/
   = link_to 'Show', @party |
   = link_to 'Back', parties_path 
