--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -5,7 +5,7 @@
 
 @import "compass/reset";
 
-body p, ol, ul, td {
+body, p, ol, ul, td {
 	font-family: verdana, arial, helvetica, sans-serif;
   font-size:   13px;
   line-height: 18px;
@@ -13,42 +13,79 @@ body p, ol, ul, td {
 
 body {
 	padding: 10px;
+}
 	
-	#content {
-		margin-left: 100px;
+#content {
+	border: 2px solid #aaa;
+	background-color: #ddd;
+	
+	h1 {
+		font-size: 28px;
+		margin: 2px;
+		padding-bottom: 20px;
+		font-weight: bold;
+	}
+	
+	#index {
+		margin: 5px;
 		
 		h1 {
-			font-size: 28px;
-			margin: 10px;
+			float: left;
 		}
-	
-		tr {
-			padding: 2px;
-		
-			th {
-				padding: 0 4px 0 4px;
-			}
-		
-			td {
-				padding: 0 4px 0 4px;
+			
+		#search {
+			position: relative;
+			float: right;
+			
+			p {
+				display: inline;
 			}
 		}
 
+		table {
+			clear: both;
+		
+			tr {
+				border-bottom: 1px solid black;
+
+				th {
+					padding: 0 4px 0 4px;
+					font-weight: bold;
+				}
+
+				td {
+					padding: 0 4px 10px 4px;
+					
+					li {
+						margin-left: 10px;
+						a {
+							font-size: 10px;
+						}
+					}
+				}
+			}	
+		}
+	
 		a { 
 			color: blue; 
 			text-decoration: none;
-		
-			visited { 
-				color: red; 
-			}
-		
-			hover { 
-				color: red; 
-				background-color: green; 
-			}
 		}
 	}
+	
+	#new {
+		margin: 5px;
+		
+	}
+	
+	#show {
+		margin: 5px;
+	}
+	
+	#edit {
+		margin: 5px;
+	}
 }
+
 
 pre {
   background-color: #eee;
